fixed the oldchunks/oldchunks view so that the middle sat fuller on the page, and so that it could still scroll. Changed font for scene to Courier New, moved title up a little

--- a/app/views/final_map.erb
+++ b/app/views/final_map.erb
@@ -1,4 +1,15 @@
-<!-- <p>Here are the highests ranking versions of scenes, <%= @project.newchunk %></p> 
+
+<style>
+
+
+
+
+
+</style>
+
+
+
+<p>Here are the highests ranking versions of scenes, <%= @project.newchunk %></p> 
 
 
 <% @user.oldchunks.each do |oldchunk| %>
@@ -14,4 +25,4 @@
  <p><%= newchunk.image_link %></p>
  <p><%= newchunk.video_link %></p>
  <p><%= newchunk.sound_link %></p><br>
- <% end %>-->
+ <% end %>
