--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -26,16 +26,19 @@ font-family: 'Audiowide', cursive;
 
 
     #side-title-n {
-    font-size: 62px;
-    letter-spacing: 13px;
-    top: 291px;
-    left: -251px;
-    height: 110px;
+    font-size: 28px;
+    letter-spacing: 1px;
+    top: 36%;
+    left: -248px;
+    height: 22%;
     transform: rotate(-90deg);
     z-index: 4;
     font-style: italic;
     color: #ff5d55;
-    position: fixed;}
+    position: fixed;
+    /* max-height: 1119px; */
+    /* max-width: 1100px; */
+    overflow: scroll}
 
     #video-n {
     position: absolute;
