--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -106,7 +106,7 @@ body{
     
     z-index: 4;
     font-style: italic;
-    color: white;
+    color: black;
     position: fixed;
 }
 
@@ -148,16 +148,30 @@ body{
        color:#ff3823;
      }
     
-#o-title {
-    font-size: 25px;
+ #newchunk-title {
+    /*font-size: 25px;
     color: rgba(255, 85, 85, 0.74);
     width: 204px;
     height: 141px;
     left: 550px;
     top: 94px;
     position: fixed;
+    font-style: italic;*/
+    /* transform: rotate(-90deg); */
+
+  font-size: 28px;
+    letter-spacing: 1px;
+    top: 36%;
+    left: -248px;
+    height: 22%;
+    transform: rotate(-90deg);
+    z-index: 4;
     font-style: italic;
-    /* transform: rotate(-90deg); */}
+    color: #ff5d55;
+    position: fixed;
+    /* max-height: 1119px; */
+    /* max-width: 1100px; */
+    overflow: scroll}
 
    #side-edit{
     font-size: 45px;
@@ -227,11 +241,11 @@ body{
     top: 595px;
     letter-spacing: 5px;
     font-style: italic;}*/
-
-   #newchunk-title {position: fixed;
-    left: -234px;
+    #o-title {
+    position: fixed;
+    left: -133px;
     font-size: 61px;
-    top: 275px;
+    top: 390px;
     letter-spacing: 5px;
     font-style: italic;
     transform: rotate(-90deg);
