--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -35,7 +35,7 @@ font-family: 'Audiowide', cursive;
     font-size: 66px;
     letter-spacing: 11px;
     left: 183px;
-    top: 78px;
+    top: 38px;
     width: 931px;
     height: 56px;
     text-align: center;
@@ -108,30 +108,39 @@ color:white;
 }
 
 .oldchunk-text {
-    font-style: italic;
+        /* font-style: italic; */
     /* font-weight: bold; */
     /* position: fixed; */
-    font-size: 9px;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     /* left: 183px; */
     /* top: 580px; */
     /* width: 1000px; */
     max-height: 62px;
     overflow: scroll;
-    overflow-x: scroll;
-    overflow-y: scroll;
+    /* overflow-x: scroll; */
+    /* overflow-y: scroll; */
     color: white;
     margin-bottom: 5px;
+    font-family: courier new;
+    font-size: 9px;
+
 
 }
 
 #box-o-scenes {
-  top: 186px;
-  left: 100px;
-  position: fixed;
-  overflow: scroll;
-  right: 100px;
-  bottom: 180px;
+        top: 135px;
+    left: 128px;
+    position: fixed;
+    overflow: scroll;
+    right: 165px;
+    /* bottom: 54px; */
+    /* overflow-x: scroll; */
+    /* overflow-y: scroll; */
+    /* max-height: 429px; */
+    min-height: 568;
+    min-height: 568;
+    /* min-height: 568px; */
+    bottom: 72px;
 }
 
 #users {
