finally got the newchunk show page in the views almost exactly how I want it to look, except the trash can is hidden. So, I copied the form of that into the create page as they are so similar, and plan on doing a few tweaks to that for my next commit. Right now, the create newchunk view page is a bunch of code without divs or tags, and the copied css from the show page, with the tags having an added -create on the end, so I don't forget which section I'm on, and so the program doesn't get confused with lots of same named tags.

--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -26,19 +26,21 @@ font-family: 'Audiowide', cursive;
 
 
     #side-title-n {
-    font-size: 38px;
+    font-size: 30px;
     letter-spacing: 5px;
-    top: 322px;
-    left: -140px;
-    height: 78px;
-    transform: rotate(-90deg);
+    top: 588px;
+    left: 20px;
+    height: 86px;
     z-index: 4;
     font-style: italic;
     color: #ff5d55;
     position: fixed;
     overflow: scroll;
-    width: 379px;
+    width: auto;
     white-space: nowrap;
+    /* overflow-x: scroll; */
+    transform: rotate(-90deg);
+    transform-origin: top left;
     }
   
   #video-n {
