--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -79,6 +79,7 @@ body{
     height: 48px;
     width: 51px;
     left: 339px;
+    z-index:13;
   }
 
   #image {
@@ -87,6 +88,7 @@ body{
     height: 48px;
     width: 51px;
     left: 236px;
+    z-index:13;
   }
 
   #sound {
@@ -95,6 +97,7 @@ body{
     height: 48px;
     width: 61px;
     left: 136px;
+    z-index:13;
   }
 
   #newchunk-text {
@@ -110,20 +113,23 @@ body{
     position: fixed;
 }
 
-  #comment-show {
-    border: 1px solid #ff3823;
+  #comment-show  {
+        border: 1px solid #ff3823;
     background-color: rgb(253, 244, 248);
     border-radius: 10px;
     font-size: 100%;
     color: black;
     width: 543px;
     height: 138px;
-    left: 601px;
-    top: 337px;
-    position: fixed;
+    left: 0px;
+    top: 39px;
+    position: absolute;
     padding: 10px;
-    letter-spacing: 7px;
-  }
+    letter-spacing: 2px;
+    font-family: "Courier New";
+    font-size: 12px;
+    font-style: italic;
+    z-index: 14;}
 
   #comment-show::-webkit-input-placeholder{
        font-family:Audiowide;
@@ -208,30 +214,33 @@ body{
 
 }        
    
-  .comment-text {
+  /*.comment-text {
     font-family: "Courier New";
     font-style: italic;
-    position: fixed;
+    position: absolute;
     font-size: 12px;
     letter-spacing: 1px;
     left: 631px;
     top: 547px;
     width: 436px;
     height: 56px;
-  }  
+  }  */
     
    .indi-comments {
-    border: 1px solid #ff3823;
+   border: 1px solid #ff3823;
     background-color: rgb(253, 244, 248);
     border-radius: 10px;
-    font-size: 100%;
-    color: black;
-    width: 543px;
-    height: 138px;
-    left: 601px;
+    font-size: 12px;
+    color: #ff5555;
+    width: 559px;
+    height: 143px;
+    left: 0px;
     margin-bottom: 5px;
-    position: fixed;
-    padding:10px;
+    position: relative;
+    padding: 10px;
+    /* top: 245px; */
+    font-family: "Courier New";
+    font-style: italic;
    } 
 
    /*#newchunk-title {
@@ -243,13 +252,19 @@ body{
     font-style: italic;}*/
     #o-title {
     position: fixed;
-    left: -133px;
+    left: 9px;
     font-size: 61px;
-    top: 390px;
+    top: 601px;
     letter-spacing: 5px;
     font-style: italic;
     transform: rotate(-90deg);
+    transform-origin: top left;
+    width: auto;
+    white-space: nowrap;
 }
+
+
+
 
    
 
@@ -278,10 +293,10 @@ body{
     font-style: italic;}
     
   #vote-checkbox {
-    position: fixed;
-    left: 944px;
+    position: absolute;
+    left: 341px;
     font-size: 13px;
-    top: 312px;
+    top: 10px;
     letter-spacing: 6px;
     font-style: italic;
 
@@ -305,26 +320,24 @@ body{
    }
 
    #plus-show {
-    position: fixed;
-    left: 770px;
-    top: 423px;
+        position: absolute;
+    left: 201px;
+    top: 119px;
     width: 192px;
     height: 147px;
-    transform: scale(1);
-    transform-origin: 137px 94px;
     color: red;
+    z-index: 14;
 }
 
-#scroll-box{
-  top: 139px;
+
+#scroll-box {
+    top: 305px;
     position: fixed;
-    
-    width: 1100px;
-    left: 100px;
+    width: 604px;
+    left: 585px;
     overflow: scroll;
-    padding-top: 26px;
-    height:400px;
-}
+    padding-top: 0px;
+    height: 287px;}
 
 #trash-can {
     position: fixed;
@@ -335,6 +348,21 @@ body{
     transform: scale(1);
     transform-origin: 137px 94px;
     color: red;
+    z-index:14;
+}
+
+#comment-wrapper {
+
+  font-family: "Courier New";
+    font-style: italic;
+    position: absolute;
+    font-size: 12px;
+    letter-spacing: 1px;
+    left: 0px;
+    top: 0px;
+    width: 436px;
+    height: 56px;
+    padding-top: 243px;
 }
 
 </style>
@@ -405,18 +433,18 @@ body{
 <input type="image" id="plus-show" src="/images/plus-red.svg">
 
 
-<input type="hidden" name="id" value="<%=@newchunk.id%>"></div>
+<input type="hidden" name="id" value="<%=@newchunk.id%>">
               
 </form>
 
-    <div class="comment-text">
+    <div id="comment-wrapper">
         <% @comments.each do |comment| %>
         <%user = User.find_by_id(comment.user_id) %>
         <div class="indi-comments"><p><%= user.username %></p>
         <p><%= comment.text %></p><br></div>
         <%end%>
 
-    </div>
+   </div>
   
   </div> <!-- end of scroll box -->
 </div>
