--- a/app/views/newchunks/create_newchunk.erb
+++ b/app/views/newchunks/create_newchunk.erb
@@ -519,6 +519,11 @@ body{
   #title-text-create input {
     border: none;
     background-color: transparent;
+    
+    font-family: "Courier New";
+    font-size: 15px;
+    font-weight: bold;
+    font-style: italic;
   }
 
   #title-text-create input::-webkit-input-placeholder{
