ok, I finally implemented the final map page without any style, so I could see if my new idea about how to calculate and sort one version of each newchunk by the ones people voted for the most. I have a feeling I could have done something simpler if I were more of a master of active record/Sqlite3, but I rubied my way around that in some kind of gnarly thing in the project controller. It worked, but only if there was a newchunk to go with every oldchunk, and/or if it was that plus the fact that some had no votes at all. I figure this is a known problem with databases, and I'm guessing there is a code around or a database seeding kind of thing that doesn't actually create objects, but keeps the computer from going nil and breaking at that point.I'm going to keep thinking about that. I think I have every essential page cssed except now for the score page. will work on that next

--- a/app/views/final_map.erb
+++ b/app/views/final_map.erb
@@ -9,20 +9,18 @@
 
 
 
-<p>Here are the highests ranking versions of scenes, <%= @project.newchunk %></p> 
+<div>Here are the highest ranking versions of scenes, <%= @project.title %></div> 
 
 
-<% @user.oldchunks.each do |oldchunk| %>
- 
- <p><%= oldchunk.title %></p>
- <p><%= oldchunk.text %></p><br>
+
+<%@highest_votes.each do |newchunk|%>
+<div><%= newchunk.title %></div>
+ <div><%= newchunk.text %></div>
+ <div><%= newchunk.image_link %></div>
+ <div><%= newchunk.video_link %></div>
+ <div><%= newchunk.sound_link %></div>
  <% end %>
+
+
+
  
-<% @user.newchunks.each do |newchunk| %>
- 
- <p><%= newchunk.title %></p>
- <p><%= newchunk.text %></p>
- <p><%= newchunk.image_link %></p>
- <p><%= newchunk.video_link %></p>
- <p><%= newchunk.sound_link %></p><br>
- <% end %>
