--- a/app/views/newchunks/edit_newchunk.erb
+++ b/app/views/newchunks/edit_newchunk.erb
@@ -234,7 +234,7 @@ body{
 
    .vid input::-webkit-input-placeholder{
        font-family:Audiowide;
-       font-style: italic;
+       font-style: italic;try
        color:#ff3823;
      }
    
