worked out the routes for the highest vote results of each scene coming up on the last page, i did the full css for the last page- decided it would be blue to differentiate from the rest of the pages, want to add a media print feature, so people can use it as a set list, also changed the blue on the projects index page to match it, went through, checking if all the adds and deletes worked- the mostly do, still having that issue with no seeding of the newchunks objects which won't let the newchunks be visualized again on the score page.Still have to write a readme, regex the format of the text that goes into the oldchunk text fields, because it isn't set up like a script so- hard to read. need to remember to check all media links so they stay without animation if no link present.

--- a/app/views/projects/projects_index.erb
+++ b/app/views/projects/projects_index.erb
@@ -1,6 +1,6 @@
 <style> 
 body{
-background-color: #ffa834;
+background-color: #ffc16f;
 color: white;
 font-family: 'Audiowide', cursive;
 }
@@ -50,7 +50,7 @@ font-family: 'Audiowide', cursive;
 
   .projects a {
     text-decoration: none;
-    color:#dbf4fb;
+    color:#2fa2bd;
   }
 
   .projects {
@@ -91,7 +91,7 @@ font-family: 'Audiowide', cursive;
     font-size: 25px;
     font-family: Audiowide;
     letter-spacing: 3px;
-    color:#dbf4fb;
+    color:#2fa2bd;
     z-index: 8;
 
   }
