--- a/app/views/final_map.erb
+++ b/app/views/final_map.erb
@@ -1,25 +1,213 @@
 
 <style>
+body{
+background-color: #2fa2bd;
+color: white;
+font-family: 'Audiowide', cursive;
+}
+
+#try-box {
+  display: none;
+}
 
 
+#s-hw-box {
+    text-align: center;
+    position: fixed;
+    left: 8px;
+    top: -114px;
+    width: 1272px;
+    height: 233px;
+    font-size: 338px;
+    letter-spacing: 15px;
+    font-style: italic;
+    z-index: 0;
+  } 
+
+#s-hw-box a{
+  text-decoration: none;
+  color: rgba(251, 137, 203, 0.69)
+}
+
+#s-project-title {
+   font-style: italic;
+   font-weight: bold;
+    position: fixed;
+    font-size: 66px;
+    letter-spacing: 11px;
+    left: 183px;
+    top: 38px;
+    width: 931px;
+    height: 56px;
+    text-align: center;
+    white-space: nowrap;
+}
 
 
+#s-project-title a {
+  text-decoration: none;
+  color:white;
+  white-space: nowrap;
+}
+
+
+  
+#s-beginning {
+  font-style: italic;
+    font-weight: bold;
+    position: fixed;
+    font-size: 73px;
+    letter-spacing: 11px;
+    left: 59px;
+    top: 545px;
+    width: 172px;
+    height: 233px;
+    white-space: nowrap;;
+    
+
+}
+
+#s-beginning a {
+text-decoration: none;
+color:white;
+} 
+
+.s-newchunk-title {
+      font-style: italic;
+    font-weight: bold;
+    /* position: fixed; */
+    font-size: 15px;
+    letter-spacing: 2px;
+    /* left: 183px; */
+    top: 10px;
+    /* width: 1000px; */
+    /* height: 15px; */
+    overflow: scroll;
+    color: white;
+    position: absolute;
+    
+
+}
+
+.s-newchunk-title a{
+  text-decoration: none;
+color:white;
+}
+
+.s-newchunk-text {
+       /* font-style: italic; */
+    /* font-weight: bold; */
+    position: absolute;
+    letter-spacing: 1px;
+    /* left: 183px; */
+    top: 40px;
+    /* width: 1000px; */
+    max-height: 80px;
+    overflow: scroll;
+    /* overflow-x: scroll; */
+    /* overflow-y: scroll; */
+    color: white;
+    margin-bottom: 5px;
+    font-family: courier new;
+    font-size: 15px;
+
+
+}
+
+#s-box-o-scenes {
+    top: 135px;
+    left: 128px;
+    position: fixed;
+    overflow: scroll;
+    right: 165px;
+    /* bottom: 54px; */
+    /* overflow-x: scroll; */
+    /* overflow-y: scroll; */
+    /* max-height: 429px; */
+    min-height: 568;
+   
+    /* min-height: 568px; */
+    bottom: 72px;
+}
+
+#s-users {
+  font-style: italic;
+  font-weight: bold;
+    /* position: fixed; */
+    font-size: 15px;
+    letter-spacing: 2px;
+    /* left: 183px; */
+    top: 200px; 
+    /* width: 1000px; */
+    /* height: 15px; */
+    overflow: scroll;
+    color: white;
+  }
+
+
+.box {
+  position: relative;
+    border-color: pink;
+    border-radius: 20px;
+    border-width: 1px;
+    margin: 20px;
+    left: 20px;
+    width: 931px;
+    height: 163px;
+
+}
+ .s-video {
+    position: absolute;
+    top: 133px;
+    height: 48px;
+    width: 37px;
+    left: 94px;
+  }
+
+
+  .s-image {
+        position: absolute;
+    top: 132px;
+    height: 48px;
+    width: 37px;
+    left: 158px;
+  }
+
+   .s-sound {
+  position: absolute;
+    top: 128px;
+    height: 48px;
+    width: 49px;
+    left: 10px;
+
+  }
 
 </style>
 
 
 
-<div>Here are the highest ranking versions of scenes, <%= @project.title %></div> 
+<div id="s-project-title">SCORE</div> 
 
-
-
+<div id="s-beginning"><a href="/<%=@project.pslug%>/index"><%= @project.title %></a></div>
+<div id="s-box-o-scenes">
 <%@highest_votes.each do |newchunk|%>
-<div><%= newchunk.title %></div>
- <div><%= newchunk.text %></div>
- <div><%= newchunk.image_link %></div>
- <div><%= newchunk.video_link %></div>
- <div><%= newchunk.sound_link %></div>
+
+<div class="box">
+
+<div class="s-newchunk-title"><%= newchunk.title %></div>
+ <div class="s-newchunk-text"><%= newchunk.text %></div>
+
+<div class="s-video"><a href="<%= newchunk.video_link %>" target="_blank"><img src="/images/video-camera.svg"></a></div>
+    
+<div class="s-image"><a href="<%= newchunk.image_link %>" target="_blank"><img src="/images/camera.svg"></a></div>
+
+<div class="s-sound"><a href="<%= newchunk.sound_link %>" target="blank"><img src="/images/soundcloud.svg"></a></div>
+
+
+</div>
  <% end %>
+
+</div>
 
 
 
