worked on the css for the show page of newchunks; wanted to make the side title (element o-title) link back to the list of all prologues. I was also working on the hover color and the visited color with the animations- got them all to go blue for hover, and hot pink for visited. Tried to implement the same thing on another page but failed due to an inheritance that is like spaghetti. Will fix tomorrow. Also, removed stray word text on the edit newchunks page and adjusted the reds to jive with what I'd been doing, instead of just being generic red as they were. I changed the text on the edit page so it would be red like the other pages. Tried to implement the focus feature, but I could not figure it out for the plus signs. this could be a built-in factor of using an svg for the button.

--- a/app/views/newchunks/edit_newchunk.erb
+++ b/app/views/newchunks/edit_newchunk.erb
@@ -37,10 +37,13 @@ body{
   }
 
   .newchunk-title-edit input{
-    border:transparent;
+    border: transparent;
     background-color: transparent;
     font-family: "Courier New";
     font-size: 15px;
+    font-style: italic;
+    font-weight: bold;
+    color: #ff5d55;
 
   }
 
@@ -69,7 +72,7 @@ body{
   
   .pink-box-edit {
    
-    border: 1px solid #ff3823;
+    border: 1px solid #ff5d55;
     background-color: rgb(253, 244, 248);
     border-radius: 35px;
     color: black;
@@ -171,6 +174,7 @@ body{
     overflow: scroll;
     left: 350;
     left: 572px;
+    font-style: italic;
 }
 
 .text-edit textarea {
@@ -179,36 +183,37 @@ body{
     font-family: "Courier New";
     width: 532px;
     height: 245px;
-    color: black;
+    color: #ff5d55;
     background-color: transparent;
     border: transparent;
+    font-style: italic;
 }
 
  .text-edit textarea::-webkit-input-placeholder{
        font-size: 12px;
     letter-spacing: 1px;
     font-family: "Courier New";
-       color:#ff3823;
+       color: #ff5d55;
      }
    
      .text-edit textarea::-moz-placeholder {
        font-size: 12px;
     letter-spacing: 1px;
     font-family: "Courier New";
-       color:#ff3823;
+       color: #ff5d55;
      }
    
      .text-edit textarea:-moz-placeholder {
        font-size: 12px;
     letter-spacing: 1px;
     font-family: "Courier New";
-       color:#ff3823;
+       color: #ff5d55;
      }
      .text-edit textarea:-ms-input-placeholder {
        font-size: 12px;
     letter-spacing: 1px;
     font-family: "Courier New";
-       color:#ff3823;
+       color: #ff5d55;
      }
 
 .vid {
@@ -229,30 +234,30 @@ body{
     width:331px;
     font-family: Audiowide;
     font-size: 18px;
-    color: #ff3823;
+    color: #ff5d55;
   }
 
    .vid input::-webkit-input-placeholder{
        font-family:Audiowide;
-       font-style: italic;try
-       color:#ff3823;
+       font-style: italic;
+       color:#ff5d55;
      }
    
      .vid input::-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
    
      .vid input:-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
      .vid input:-ms-input-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
 
   .pics {
@@ -273,30 +278,30 @@ body{
 
     font-family: Audiowide;
     font-size: 18px;
-    color: #ff3823;
+    color: #ff5d55;
 ">
     }
      .pics input::-webkit-input-placeholder{
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
    
      .pics input::-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
    
      .pics input:-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
      .pics input:-ms-input-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
 
    .sound {
@@ -320,30 +325,30 @@ body{
     width:331px;
     font-family: Audiowide;
     font-size: 18px;
-    color: #ff3823;
+    color: #ff5d55;
  }
 
  .sound input::-webkit-input-placeholder{
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
    
      .sound input::-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
    
      .sound input:-moz-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
      .sound input:-ms-input-placeholder {
        font-family:Audiowide;
        font-style: italic;
-       color:#ff3823;
+       color:#ff5d55;
      }
 
      #delete-button-edit {
@@ -362,7 +367,7 @@ body{
     height: 26px;
     transform: scale(1);
     transform-origin: 137px 94px;
-    color: red;
+    color: #ff5d55;
 }   
 
    #plus-edit {
