--- a/app/views/newchunks/newchunks.erb
+++ b/app/views/newchunks/newchunks.erb
@@ -5,6 +5,8 @@ background-color: #fefce0;
 color: #ff5d55;
 font-family: 'Audiowide', cursive;
 }
+
+
 #try-box {
   display:none;
 }
@@ -301,7 +303,7 @@ font-family: 'Audiowide', cursive;
     font-style: italic;
     width: 800px;
     left: 239px;
-    width: 145px;
+    width: 249px;
 
 }
 
@@ -356,7 +358,7 @@ font-family: 'Audiowide', cursive;
 
 
  
- <div class="text-n"><%= newchunk.text %>text</div>
+ <div class="text-n"><%= newchunk.text %></div>
 
   <div class="icons">
     <div id="video-n"><a href="<%= newchunk.video_link %>" target="_blank"><img src="/images/video-camera.svg"></a></div>
