Ok, I should have committed more often, as many things are changed. I made the outer and inner scroll on the oldchunks page very separated so that users could scroll through to find their scene, but so they could also see the full text of the scene with the inner scroll on that oldchunks/oldchunks view page. I also implemented a gsub for line breaks in the create portion of the oldchunk scenes, because they were showing up with no line breaks. Added the delete button for oldchunks, because they could not be deleted - only newchunks could. I had to add a controller route for the oldchunk delete and then the css on the red page so that the trash can would be small but still clear about what was being deleted.

--- a/app/views/final_map.erb
+++ b/app/views/final_map.erb
@@ -12,22 +12,22 @@ font-family: 'Audiowide', cursive;
 
 
 #s-hw-box {
-    text-align: center;
-    position: fixed;
-    left: 8px;
-    top: -114px;
-    width: 1272px;
-    height: 233px;
-    font-size: 338px;
-    letter-spacing: 15px;
-    font-style: italic;
-    z-index: 0;
+  text-align: center;
+  position: fixed;
+  left: 8px;
+  top: -114px;
+  width: 1272px;
+  height: 233px;
+  font-size: 338px;
+  letter-spacing: 15px;
+  font-style: italic;
+  z-index: 0;
   } 
 
 #s-hw-box a{
   text-decoration: none;
   color: rgba(251, 137, 203, 0.69)
-}
+ }
 
 #s-project-title {
    font-style: italic;
@@ -69,50 +69,36 @@ font-family: 'Audiowide', cursive;
 
 #s-beginning a {
 text-decoration: none;
-color:white;
+
 } 
 
 .s-newchunk-title {
-      font-style: italic;
+    font-style: italic;
     font-weight: bold;
-    /* position: fixed; */
     font-size: 15px;
     letter-spacing: 2px;
-    /* left: 183px; */
     top: 10px;
-    /* width: 1000px; */
-    /* height: 15px; */
     overflow: scroll;
     color: white;
     position: absolute;
-    
-
-}
+  }
 
 .s-newchunk-title a{
   text-decoration: none;
-color:white;
 }
 
 .s-newchunk-text {
-       /* font-style: italic; */
-    /* font-weight: bold; */
+     
     position: absolute;
     letter-spacing: 1px;
-    /* left: 183px; */
     top: 40px;
-    /* width: 1000px; */
     max-height: 80px;
     overflow: scroll;
-    /* overflow-x: scroll; */
-    /* overflow-y: scroll; */
     color: white;
     margin-bottom: 5px;
-    font-family: courier new;
+    font-family: "Courier New";
     font-size: 15px;
-
-
-}
+ }
 
 #s-box-o-scenes {
     top: 135px;
@@ -120,26 +106,16 @@ color:white;
     position: fixed;
     overflow: scroll;
     right: 165px;
-    /* bottom: 54px; */
-    /* overflow-x: scroll; */
-    /* overflow-y: scroll; */
-    /* max-height: 429px; */
     min-height: 568;
-   
-    /* min-height: 568px; */
     bottom: 72px;
 }
 
 #s-users {
   font-style: italic;
   font-weight: bold;
-    /* position: fixed; */
-    font-size: 15px;
+   font-size: 15px;
     letter-spacing: 2px;
-    /* left: 183px; */
     top: 200px; 
-    /* width: 1000px; */
-    /* height: 15px; */
     overflow: scroll;
     color: white;
   }
