--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -114,7 +114,7 @@ color:white;
     letter-spacing: 1px;
     /* left: 183px; */
     /* top: 580px; */
-    /* width: 1000px; */
+    width: 600px; */
     max-height: 62px;
     overflow: scroll;
     /* overflow-x: scroll; */
@@ -155,8 +155,34 @@ color:white;
     /* height: 15px; */
     overflow: scroll;
     color: white;
+  }
     
+    .trash-old {
+    /*position: fixed;
+    left: 936px;
+    top: 487px;
+    width: 278px;*/
+    height: 17px;
+    /*transform: scale(1);
+    transform-origin: 137px 94px;
+    color: #ff5d55;
 
+*/
+    }
+       /* position: relative;
+    left: 936px;
+    top: 0px;
+    width: 286px;
+    height: 22px;
+    transform: scale(1);
+    transform-origin: 137px 94px;
+
+*/
+.trash-position{
+    width: 100%;
+    padding-left: 2px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 </style>
@@ -182,8 +208,19 @@ color:white;
     <% @oldchunks.each do |oldchunk| %>
    
    <div class="oldchunk-title"><a href="/<%=@project.pslug%>/<%=oldchunk.oslug%>/index"><%= oldchunk.title %></a></div>
+
+   <div class="trash-position"><form method="post" action="/oldchunks/<%= oldchunk.id %>/delete">
+    
+    <input type="hidden" name="_method" id="hidden" value="DELETE"></input>
+    <input type="image" class="trash-old" src="/images/trash.svg"></input>
    
-   <div class="oldchunk-text"><%= oldchunk.text %></div>
+   </form>
+ </div>
+   
+   <div class="oldchunk-text"><%= oldchunk.text.gsub(/\n/, '<br/>') %></div>
+
+   
+
    <% end %>
 </div>
   
