I forgot to mention in my prev. commit message, that I entered in all the oldchunk scenes for Romeo and Juliet, so I could show the inner workings of the program better.

--- a/app/views/oldchunks/oldchunks.erb
+++ b/app/views/oldchunks/oldchunks.erb
@@ -112,8 +112,8 @@ color:white;
     /* font-weight: bold; */
     /* position: fixed; */
     letter-spacing: 1px;
-    /* left: 183px; */
-    /* top: 580px; */
+    
+    / top: 580px; */
     width: 600px; */
     max-height: 62px;
     overflow: scroll;
